--- a/notebook/preprocess_data.ipynb
+++ b/notebook/preprocess_data.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "three-frank",
+   "id": "assured-liquid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sized-sacrifice",
+   "id": "devoted-friendship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "individual-volunteer",
+   "id": "typical-surge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "american-swing",
+   "execution_count": 11,
+   "id": "advisory-citizenship",
    "metadata": {},
    "outputs": [],
    "source": [
     "from myscripts import preprocess_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "signal-membership",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(pre)"
    ]
   },
   {
@@ -468,15 +478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "meaning-belfast",
+   "execution_count": 9,
+   "id": "auburn-tennis",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1115, 9)\n"
+      "(1115, 10)\n"
      ]
     },
     {
@@ -500,6 +510,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Store</th>\n",
        "      <th>StoreType</th>\n",
        "      <th>Assortment</th>\n",
        "      <th>CompetitionDistance</th>\n",
@@ -510,26 +521,15 @@
        "      <th>Promo2SinceYear</th>\n",
        "      <th>PromoInterval</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Store</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>c</td>\n",
        "      <td>a</td>\n",
        "      <td>1270.0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>2008.0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -537,11 +537,12 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>a</td>\n",
        "      <td>a</td>\n",
        "      <td>570.0</td>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
        "      <td>2007.0</td>\n",
        "      <td>1</td>\n",
        "      <td>13.0</td>\n",
@@ -549,11 +550,12 @@
        "      <td>Jan,Apr,Jul,Oct</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>a</td>\n",
        "      <td>a</td>\n",
        "      <td>14130.0</td>\n",
-       "      <td>12</td>\n",
+       "      <td>12.0</td>\n",
        "      <td>2006.0</td>\n",
        "      <td>1</td>\n",
        "      <td>14.0</td>\n",
@@ -561,11 +563,12 @@
        "      <td>Jan,Apr,Jul,Oct</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>c</td>\n",
        "      <td>c</td>\n",
        "      <td>620.0</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>2009.0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -573,11 +576,12 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>a</td>\n",
        "      <td>a</td>\n",
        "      <td>29910.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>2015.0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -589,41 +593,134 @@
        "</div>"
       ],
       "text/plain": [
-       "      StoreType Assortment  CompetitionDistance CompetitionOpenSinceMonth  \\\n",
-       "Store                                                                       \n",
-       "1             c          a               1270.0                         9   \n",
-       "2             a          a                570.0                        11   \n",
-       "3             a          a              14130.0                        12   \n",
-       "4             c          c                620.0                         9   \n",
-       "5             a          a              29910.0                         4   \n",
+       "   Store StoreType Assortment  CompetitionDistance  CompetitionOpenSinceMonth  \\\n",
+       "0      1         c          a               1270.0                        9.0   \n",
+       "1      2         a          a                570.0                       11.0   \n",
+       "2      3         a          a              14130.0                       12.0   \n",
+       "3      4         c          c                620.0                        9.0   \n",
+       "4      5         a          a              29910.0                        4.0   \n",
        "\n",
-       "       CompetitionOpenSinceYear  Promo2  Promo2SinceWeek  Promo2SinceYear  \\\n",
-       "Store                                                                       \n",
-       "1                        2008.0       0              NaN              NaN   \n",
-       "2                        2007.0       1             13.0           2010.0   \n",
-       "3                        2006.0       1             14.0           2011.0   \n",
-       "4                        2009.0       0              NaN              NaN   \n",
-       "5                        2015.0       0              NaN              NaN   \n",
+       "   CompetitionOpenSinceYear  Promo2  Promo2SinceWeek  Promo2SinceYear  \\\n",
+       "0                    2008.0       0              NaN              NaN   \n",
+       "1                    2007.0       1             13.0           2010.0   \n",
+       "2                    2006.0       1             14.0           2011.0   \n",
+       "3                    2009.0       0              NaN              NaN   \n",
+       "4                    2015.0       0              NaN              NaN   \n",
        "\n",
-       "         PromoInterval  \n",
-       "Store                   \n",
-       "1                  NaN  \n",
-       "2      Jan,Apr,Jul,Oct  \n",
-       "3      Jan,Apr,Jul,Oct  \n",
-       "4                  NaN  \n",
-       "5                  NaN  "
+       "     PromoInterval  \n",
+       "0              NaN  \n",
+       "1  Jan,Apr,Jul,Oct  \n",
+       "2  Jan,Apr,Jul,Oct  \n",
+       "3              NaN  \n",
+       "4              NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "store=pd.read_csv(\"../data/store.csv\",low_memory=False,parse_dates=[4,index_col=0)\n",
+    "store=pd.read_csv(\"../data/store.csv\",low_memory=False)\n",
     "print(store.shape)\n",
     "store.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "pending-yesterday",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(41088, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id  Sales\n",
+       "0   1      0\n",
+       "1   2      0\n",
+       "2   3      0\n",
+       "3   4      0\n",
+       "4   5      0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample=pd.read_csv(\"../data/sample_submission.csv\",low_memory=False)\n",
+    "print(sample.shape)\n",
+    "sample.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "permanent-summer",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
