--- a/notebook/preprocess_data.ipynb
+++ b/notebook/preprocess_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "id": "excessive-server",
    "metadata": {},
    "outputs": [],
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "yellow-bouquet",
+   "execution_count": 117,
+   "id": "liked-scale",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "sensitive-combat",
+   "execution_count": 118,
+   "id": "typical-fleece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +44,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "leading-nitrogen",
+   "execution_count": 119,
+   "id": "reverse-frame",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "standing-permission",
+   "execution_count": 120,
+   "id": "packed-thousand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "transsexual-costs",
+   "execution_count": 121,
+   "id": "canadian-exhaust",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "<module 'myscripts.preprocess_data' from '..\\\\myscripts\\\\preprocess_data.py'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 122,
    "id": "brief-tract",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "4              NaN              NaN              NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 123,
    "id": "expired-lindsay",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "4              NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,8 +489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "intensive-apartment",
+   "execution_count": 124,
+   "id": "threaded-collar",
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "4              NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "empirical-moisture",
+   "execution_count": 125,
+   "id": "aware-fellow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,8 +643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "understood-pillow",
+   "execution_count": 126,
+   "id": "existing-france",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,8 +653,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "thrown-objective",
+   "execution_count": 127,
+   "id": "central-eleven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,8 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "going-horizon",
+   "execution_count": 128,
+   "id": "waiting-coaching",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "occupational-subscriber",
+   "execution_count": 129,
+   "id": "physical-browser",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,8 +712,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "raising-laugh",
+   "execution_count": 130,
+   "id": "thick-chancellor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,8 +723,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "average-crown",
+   "execution_count": 131,
+   "id": "conscious-hollywood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,35 +733,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "legislative-python",
+   "execution_count": 132,
+   "id": "comic-mailman",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Store                           0\n",
-       "DayOfWeek                       0\n",
-       "Date                            0\n",
-       "Sales                           0\n",
-       "Customers                       0\n",
-       "Open                            0\n",
-       "Promo                           0\n",
-       "StateHoliday                    0\n",
-       "SchoolHoliday                   0\n",
-       "StoreType                       0\n",
-       "Assortment                      0\n",
-       "CompetitionDistance          2642\n",
-       "CompetitionOpenSinceMonth       0\n",
-       "CompetitionOpenSinceYear        0\n",
-       "Promo2                          0\n",
-       "Promo2SinceWeek                 0\n",
-       "Promo2SinceYear                 0\n",
-       "PromoInterval                   0\n",
+       "Store                             0\n",
+       "DayOfWeek                         0\n",
+       "Date                              0\n",
+       "Sales                             0\n",
+       "Customers                         0\n",
+       "Open                              0\n",
+       "Promo                             0\n",
+       "StateHoliday                      0\n",
+       "SchoolHoliday                     0\n",
+       "StoreType                         0\n",
+       "Assortment                        0\n",
+       "CompetitionDistance            2642\n",
+       "CompetitionOpenSinceMonth    323348\n",
+       "CompetitionOpenSinceYear     323348\n",
+       "Promo2                            0\n",
+       "Promo2SinceWeek              508031\n",
+       "Promo2SinceYear              508031\n",
+       "PromoInterval                508031\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,34 +772,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "caring-clerk",
+   "execution_count": 133,
+   "id": "naughty-timothy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Id                            0\n",
-       "Store                         0\n",
-       "DayOfWeek                     0\n",
-       "Date                          0\n",
-       "Open                         11\n",
-       "Promo                         0\n",
-       "StateHoliday                  0\n",
-       "SchoolHoliday                 0\n",
-       "StoreType                     0\n",
-       "Assortment                    0\n",
-       "CompetitionDistance          96\n",
-       "CompetitionOpenSinceMonth     0\n",
-       "CompetitionOpenSinceYear      0\n",
-       "Promo2                        0\n",
-       "Promo2SinceWeek               0\n",
-       "Promo2SinceYear               0\n",
-       "PromoInterval                 0\n",
+       "Id                               0\n",
+       "Store                            0\n",
+       "DayOfWeek                        0\n",
+       "Date                             0\n",
+       "Open                            11\n",
+       "Promo                            0\n",
+       "StateHoliday                     0\n",
+       "SchoolHoliday                    0\n",
+       "StoreType                        0\n",
+       "Assortment                       0\n",
+       "CompetitionDistance             96\n",
+       "CompetitionOpenSinceMonth    15216\n",
+       "CompetitionOpenSinceYear     15216\n",
+       "Promo2                           0\n",
+       "Promo2SinceWeek              17232\n",
+       "Promo2SinceYear              17232\n",
+       "PromoInterval                17232\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,8 +810,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "productive-romantic",
+   "execution_count": 134,
+   "id": "smoking-trainer",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "[508031 rows x 18 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,8 +1163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "anonymous-toolbox",
+   "execution_count": 135,
+   "id": "proud-girlfriend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,8 +1174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "preliminary-array",
+   "execution_count": 136,
+   "id": "important-announcement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,8 +1185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "varied-gasoline",
+   "execution_count": 137,
+   "id": "earned-talent",
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1315,7 @@
        "21             22.0           2012.0   Jan,Apr,Jul,Oct  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "failing-athens",
+   "id": "western-province",
    "metadata": {},
    "source": [
     "we can see that for the first two rows, the store is starting but we have null values in CompetitionOpenSinceMonth and CompetitionOpenSinceYear. Therefore, we can impute the missing values by filling with minimun values since that nan values might be due to the fact there were already the competition since the store open"
@@ -1334,8 +1334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "visible-entrance",
+   "execution_count": 138,
+   "id": "overall-reference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,8 +1347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "valid-directive",
+   "execution_count": 139,
+   "id": "adaptive-thompson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,62 +1357,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "republican-garbage",
+   "execution_count": 140,
+   "id": "functional-disclaimer",
    "metadata": {},
    "outputs": [],
    "source": [
     "cleaner_train.filling_nan(train,['CompetitionDistance'],train.CompetitionDistance.mean())\n",
-    "cleaner_test.filling_nan(test,['CompetitionDistance'],test.CompetitionDistance.mean())"
+    "cleaner_test.filling_nan(test,['CompetitionDistance'],test.CompetitionDistance.mean())\n",
+    "# cleaner_test.filling_nan(test,['Open'],test.Open.mode())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "criminal-gazette",
+   "execution_count": 141,
+   "id": "supported-baseline",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.fillna(1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "sealed-cancellation",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>Store</th>\n",
+       "      <th>DayOfWeek</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Promo</th>\n",
+       "      <th>StateHoliday</th>\n",
+       "      <th>SchoolHoliday</th>\n",
+       "      <th>StoreType</th>\n",
+       "      <th>Assortment</th>\n",
+       "      <th>CompetitionDistance</th>\n",
+       "      <th>CompetitionOpenSinceMonth</th>\n",
+       "      <th>CompetitionOpenSinceYear</th>\n",
+       "      <th>Promo2</th>\n",
+       "      <th>Promo2SinceWeek</th>\n",
+       "      <th>Promo2SinceYear</th>\n",
+       "      <th>PromoInterval</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Store                        0\n",
-       "DayOfWeek                    0\n",
-       "Date                         0\n",
-       "Sales                        0\n",
-       "Customers                    0\n",
-       "Open                         0\n",
-       "Promo                        0\n",
-       "StateHoliday                 0\n",
-       "SchoolHoliday                0\n",
-       "StoreType                    0\n",
-       "Assortment                   0\n",
-       "CompetitionDistance          0\n",
-       "CompetitionOpenSinceMonth    0\n",
-       "CompetitionOpenSinceYear     0\n",
-       "Promo2                       0\n",
-       "Promo2SinceWeek              0\n",
-       "Promo2SinceYear              0\n",
-       "PromoInterval                0\n",
-       "dtype: int64"
+       "Empty DataFrame\n",
+       "Columns: [Id, Store, DayOfWeek, Date, Open, Promo, StateHoliday, SchoolHoliday, StoreType, Assortment, CompetitionDistance, CompetitionOpenSinceMonth, CompetitionOpenSinceYear, Promo2, Promo2SinceWeek, Promo2SinceYear, PromoInterval]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "analyzed-enough",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test.isna().sum()"
+    "test[test['Open'].isna()]"
    ]
   }
  ],
