rf and mlflow logging completed

--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "relevant-entrance",
+   "id": "aging-recycling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "french-values",
+   "id": "gentle-receptor",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "floating-registration",
+   "id": "solved-nowhere",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bearing-township",
+   "id": "floppy-union",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "phantom-flexibility",
+   "execution_count": null,
+   "id": "interpreted-armenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +147,16 @@
     "    data = client.get_run(run_id).data\n",
     "    tags = {k: v for k, v in data.tags.items() if not k.startswith(\"mlflow.\")}\n",
     "    artifacts = [f.path for f in client.list_artifacts(run_id, \"model\")]\n",
-    "    return data.params, data.metrics, tags, artifacts\n",
-    "\n",
-    "\n",
+    "    return data.params, data.metrics, tags, artifacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "weighted-curve",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "estimators = 25\n",
     "depth = 15\n",
     "pipeline = Pipeline([('scaler', StandardScaler()),\n",
@@ -162,8 +169,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "structured-david",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val='validation_'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
-   "id": "prime-optics",
+   "id": "fossil-arkansas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,17 +191,15 @@
     "\n",
     "    rf_model = pipeline.fit(X_train, y_train)\n",
     "    y_pred = rf_model.predict(X_val)\n",
-    "    mse = model_prep.error_calculate(y_val, y_pred)\n",
-    "    mlflow.log_param(\"number of estimators\", estimators)\n",
-    "    mlflow.log_param(\"maximum depth\", depth)\n",
-    "    mlflow.log_metric(\"mse\", mse)\n",
+    "    mse, rmse, r2 = model_prep.error_calculate(y_val, y_pred)\n",
+    "    mlflow.log_metrics({val + \"mse\": mse, val + 'rmse': rmse, val + 'r2': r2})\n",
     "    mlflow.sklearn.log_model(rf_model, \"Regressor model\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ruled-wilderness",
+   "id": "dimensional-authorization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,10 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "pressing-hometown",
+   "execution_count": 23,
+   "id": "corporate-conference",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/05-08-2022-13-13-46.pkl']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Model serializing and saving\n",
     "#creating a file name using the now timestamp\n",
