model params logging

--- a/notebook/modelling.ipynb
+++ b/notebook/modelling.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aging-recycling",
+   "id": "packed-magnitude",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "gentle-receptor",
+   "id": "aggregate-sociology",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "solved-nowhere",
+   "id": "agricultural-discipline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "floppy-union",
+   "id": "creative-cooperative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "interpreted-armenia",
+   "execution_count": 8,
+   "id": "satisfactory-huntington",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "weighted-curve",
+   "execution_count": 9,
+   "id": "olive-words",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "structured-david",
+   "execution_count": 10,
+   "id": "sporting-cornwall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "fossil-arkansas",
+   "execution_count": 11,
+   "id": "incorrect-branch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,14 +192,14 @@
     "    rf_model = pipeline.fit(X_train, y_train)\n",
     "    y_pred = rf_model.predict(X_val)\n",
     "    mse, rmse, r2 = model_prep.error_calculate(y_val, y_pred)\n",
-    "    mlflow.log_metrics({val + \"mse\": mse, val + 'rmse': rmse, val + 'r2': r2})\n",
+    "    mlflow.log_metrics({val + \"mse\": mse, val + 'rmse': rmse, val + 'r2': r2},step=1)\n",
     "    mlflow.sklearn.log_model(rf_model, \"Regressor model\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dimensional-authorization",
+   "execution_count": 12,
+   "id": "ahead-islam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "corporate-conference",
+   "execution_count": 13,
+   "id": "apparent-second",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../models/05-08-2022-13-13-46.pkl']"
+       "['../models/05-08-2022-13-48-27.pkl']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,6 +230,22 @@
     "    datetime.now().strftime(\"%d-%m-%Y-%H-%M-%S\")) + '.pkl'\n",
     "joblib.dump(rf_model, mdl_tmp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hearing-championship",
+   "metadata": {},
+   "source": [
+    "**Feature Importance**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ranging-saskatchewan",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
