load EDA data with dvc

--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "dependent-witness",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\faith bagire\\pycharmprojects\\pythonproject\\v\\lib\\site-packages\\ipykernel_launcher.py:8: FutureWarning: MLflow support for Python 3.6 is deprecated and will be dropped in an upcoming release. At that point, existing Python 3.6 workflows that use MLflow will continue to work without modification, but Python 3.6 users will no longer get access to the latest MLflow features and bugfixes. We recommend that you upgrade to Python 3.7 or newer.\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import warnings\n",
@@ -13,10 +22,48 @@
     "import seaborn as sns\n",
     "import matplotlib as mpl\n",
     "import numpy as np\n",
+    "import dvc.api\n",
+    "import mlflow\n",
     "plt.rcParams[\"patch.force_edgecolor\"] = True\n",
     "plt.style.use('fivethirtyeight')\n",
     "mpl.rc('patch', edgecolor = 'dimgray', linewidth=1)\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "noted-brown",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_dvc(path, git_revision):\n",
+    "\n",
+    "    repo = 'https://github.com/fbagire/sales_predict'\n",
+    "    version = git_revision\n",
+    "\n",
+    "    data_url = dvc.api.get_url(path=path, repo=repo, rev=version)\n",
+    "\n",
+    "    mlflow.set_experiment('sales_predict')\n",
+    "\n",
+    "    if __name__ == '__main__':\n",
+    "        warnings.filterwarnings('ignore')\n",
+    "        np.random.seed(40)\n",
+    "        with mlflow.start_run(nested=True) as mlrun:\n",
+    "            data = pd.read_csv(data_url, index_col=[0])\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "swedish-irrigation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# git_rev\n",
+    "v3=\"214d629a7f3ab08d36c1abb773b0fecf2d78a6c3\""
    ]
   },
   {
@@ -31,7 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
+   "id": "entitled-observation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train=load_data_dvc('data/train.csv',v3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "fuzzy-shirt",
    "metadata": {},
    "outputs": [
@@ -223,20 +280,20 @@
        "4              NaN              NaN              NaN  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train=pd.read_csv(\"../data/train.csv\",low_memory=False,parse_dates=[3],index_col=0)\n",
+    "train['Date']=pd.to_datetime(train['Date'])\n",
     "print(train.shape)\n",
     "train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "structured-consolidation",
    "metadata": {},
    "outputs": [
@@ -264,7 +321,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +524,7 @@
     }
    ],
    "source": [
-    "test=pd.read_csv(\"../data/test.csv\",parse_dates=[4],index_col=0)\n",
+    "test=pd.read_csv('/data/test.csv')\n",
     "print(test.shape)\n",
     "test.head()"
    ]
